force-app/main/default/objects/mcdm_15__MarketingCloudLinkedJourney__c/mcdm_15__MarketingCloudLinkedJourney__c.object-meta.xml
<CustomObject>
    <description>Links a Salesforce Campaign and a Marketing Cloud Journey</description>
    <label>Linked Journey</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Linked Journey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Linked Journeys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>