force-app/main/default/objects/mcdm_15__MarketingCloudLinkedJourney__c/fields/mcdm_15__JourneyId__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__JourneyId__c</fullName>
    <description>Id of the Marketing Cloud Journey.</description>
    <label>Journey ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>