force-app/main/default/objects/mcdm_15__MarketingCloudLinkedJourney__c/fields/mcdm_15__JourneyName__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__JourneyName__c</fullName>
    <description>The name of the Marketing Cloud Journey.</description>
    <label>Journey Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>