force-app/main/default/objects/mcdm_15__MarketingCloudLinkedJourney__c/fields/mcdm_15__LinkedBusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__LinkedBusinessUnit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked Business Unit</label>
    <referenceTo>mcdm_15__LinkedBusinessUnit__c</referenceTo>
    <relationshipLabel>Linked Journeys</relationshipLabel>
    <relationshipName>Linked_Journeys</relationshipName>
    <type>Lookup</type>
</CustomField>