force-app/main/default/objects/mcdm_15__MarketingCloudLinkedJourney__c/fields/mcdm_15__ObjectId__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__ObjectId__c</fullName>
    <description>Id of the Salesforce object linked to the Journey.</description>
    <label>Object ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>